--- a/src/css/site.css
+++ b/src/css/site.css
@@ -7,7 +7,7 @@
     height: 5em;
 }
 
-.about-page .jumbotron {
+.sitemap-page .jumbotron {
     margin: 0;
     background: rgba(9, 69, 95, 0.8);
     color: white;
